@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+include/define.h, include/libproto.h, common/item.c, common/readable.c,
+  common/loader.l: Make safe_strcat() (defined in include/define.h for some
+  odd reason) use size_t instead of int for buffer size, since this includes
+  changing a pointer to int into a pointer to size_t update all calls to
+  safe_strcat() to use size_t for that.
+Arvid Norlander 2009-02-02
+
 common/object.c, include/config.h: Document the different levels of MEMORY_DEBUG
   and add a third level that calls free() instead of adding back to free list
   in order to more properly detect use after free.
